anywhere/k8s/monitoring/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`g1.beijns.eu.org`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        # HelmRelease name kube-prometheus-stack → grafana service
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: g1.beijns.eu.org
